Added database to SQL!

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,10 +1,7 @@
 {
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft": "Warning",
-  //    "Microsoft.Hosting.Lifetime": "Information"
-
+  "ConnectionStrings": {
+    "WebApiDatabase": "Server=DESKTOP-35CADGH\\SQLEMA;Database=WebApiDatabase;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
