--- a/appsettings.json
+++ b/appsettings.json
@@ -2,16 +2,14 @@
   "AppSettings": {
     "Secret": "Mikä tämä salaisuus oikein on?"
   },
+  "ConnectionStrings": {
+    "WebApiDatabase": "Server=DESKTOP-35CADGH\\SQLEMA;Database=WebApiDatabase;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      //"Logging": {
-      //  "LogLevel": {
-      //    "Default": "Information",
-      //    "Microsoft": "Warning",
-      //    "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
