--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:60254",
       "sslPort": 44360
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "http://localhost:4000;",
+      "applicationUrl": "https://localhost:4001;http://localhost:4000;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
