--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=DESKTOP-35CADGH\\SQLEMA;Database=WebApiDatabase;Trusted_Connection=True;"
+    "WebApiDatabase": "Server=tcp:marianlopputyo.database.windows.net,1433;Initial Catalog=WebApiDatabase;Persist Security Info=False;User ID=marianlopputyo;Password=Perhonen1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
