--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "Secret": "Mik‰ t‰m‰ salaisuus oikein on?"
+    "Secret": "Mik√§ t√§m√§ salaisuus oikein on?"
   },
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=DESKTOP-35CADGH\\SQLEMA;Database=WebApiDatabase;Trusted_Connection=True;"
+    "WebApiDatabase": "Server=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx;"
   },
   "Logging": {
     "LogLevel": {
