--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=DESKTOP-35CADGH\\SQLEMA;Database=WebApiDatabase;Trusted_Connection=True;"
+    "WebApiDatabase": "Server=xxxx\\xxxx;Database=xxxx;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
