Final changes -added approval POST for opettaja controller -added additional view for opettaja's and oppilas's view.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "Secret": "Mikä tämä salaisuus oikein on?"
+    "Secret": "Secret"
   },
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=tcp:marianlopputyo.database.windows.net,1433;Initial Catalog=WebApiDatabase;Persist Security Info=False;User ID=marianlopputyo;Password=Perhonen1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "WebApiDatabase": ""
   },
   "Logging": {
     "LogLevel": {
